--- a/Event Attendees Management/Src/Screen1.fx.yaml
+++ b/Event Attendees Management/Src/Screen1.fx.yaml
@@ -19,7 +19,7 @@ Screen1 As screen:
         FontWeight: =FontWeight.Bold
         Height: =100
         Size: =32
-        Text: ="Global Power Platform Bootcamp 2024 Ahmedabad"
+        Text: ="Global Power Platform Bootcamp 2024 Ahmedabad New"
         Width: =1147
         X: =90
         Y: =482
