--- a/Event Attendees Management/Src/Screen1.fx.yaml
+++ b/Event Attendees Management/Src/Screen1.fx.yaml
@@ -25,3 +25,11 @@ Screen1 As screen:
         Y: =482
         ZIndex: =2
 
+    Label2 As label:
+        Height: =71
+        Text: ="Text new control added "
+        Width: =525
+        X: =308
+        Y: =132
+        ZIndex: =3
+
