--- a/Event Attendees Management/Src/Screen1.fx.yaml
+++ b/Event Attendees Management/Src/Screen1.fx.yaml
@@ -25,3 +25,9 @@ Screen1 As screen:
         Y: =482
         ZIndex: =2
 
+    Label2 As label:
+        Text: ="Event management "
+        X: =560
+        Y: =284
+        ZIndex: =3
+
