--- a/Event Attendees Management/Src/Screen1.fx.yaml
+++ b/Event Attendees Management/Src/Screen1.fx.yaml
@@ -31,3 +31,9 @@ Screen1 As screen:
         Y: =284
         ZIndex: =3
 
+    Label3 As label:
+        Text: ="Text 1234"
+        X: =40
+        Y: =40
+        ZIndex: =4
+
