--- a/Event Attendees Management/Src/Screen2.fx.yaml
+++ b/Event Attendees Management/Src/Screen2.fx.yaml
@@ -80,3 +80,7 @@
                 RadiusTopRight: =0
                 ZIndex: =5
 
+                Button1 As button:
+                    Text: ="Button"
+                    ZIndex: =1
+
