--- a/Event Attendees Management/Src/Screen1.fx.yaml
+++ b/Event Attendees Management/Src/Screen1.fx.yaml
@@ -1,6 +1,6 @@
 Screen1 As screen:
     BackgroundImage: ='4964089'
-    ImagePosition: =ImagePosition.Fill
+    ImagePosition: =ImagePosition.Stretch
 
     Image1 As image:
         Height: =198
@@ -28,6 +28,7 @@ Screen1 As screen:
         AutoPause: =false
         AutoStart: =true
         Duration: =5000
+        OnTimerEnd: =Navigate(Dashboard,ScreenTransition.Fade)
         Visible: =false
         X: =40
         Y: =40
