--- a/Event Attendees Management/Src/Dashboard.fx.yaml
+++ b/Event Attendees Management/Src/Dashboard.fx.yaml
@@ -1,2 +1,29 @@
 Dashboard As screen:
 
+    TextInput1 As text:
+        Default: =""
+        Height: =82
+        Width: =1366
+        ZIndex: =1
+
+    TextInput2 As text:
+        Default: ="Global Power Platform Bootcamp 2024 Ahmedabad"
+        Height: =61
+        Width: =646
+        X: =332
+        Y: =21
+        ZIndex: =2
+
+    Image1 As image:
+        Height: =81
+        Image: ='company logo'
+        Width: =232
+        Y: =1
+        ZIndex: =3
+
+    Button2 As button:
+        Text: ="Registration"
+        X: =1100
+        Y: =31
+        ZIndex: =4
+
