--- a/Event Attendees Management/CanvasManifest.json
+++ b/Event Attendees Management/CanvasManifest.json
@@ -116,7 +116,7 @@
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Event%2BAttendees%2BManagement.msapp",
+    "Name": "Event Attendees Management",
     "OriginatingVersion": "1.336",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
