--- a/Event Attendees Management/Src/Success.fx.yaml
+++ b/Event Attendees Management/Src/Success.fx.yaml
@@ -1,8 +1,25 @@
 Success As screen:
+    BackgroundImage: ='photo_2024-02-05_12-15-49'
+    ImagePosition: =ImagePosition.Stretch
 
-    Button1 As button:
-        Text: ="Button"
-        X: =40
-        Y: =40
+    Label2 As label:
+        FontWeight: =FontWeight.Bold
+        Height: =115
+        Size: =40
+        Text: ="Thank you for Registration!"
+        Width: =1030
+        X: =260
+        Y: =424
         ZIndex: =1
+
+    Icon1 As icon.CheckBadge:
+        BorderColor: =RGBA(54, 176, 75, 1)
+        Color: =RGBA(99, 139, 44, 1)
+        Fill: =RGBA(241, 244, 249, 1)
+        Height: =160
+        Icon: =Icon.CheckBadge
+        Width: =144
+        X: =584
+        Y: =264
+        ZIndex: =3
 
