--- a/Event Attendees Management/CanvasManifest.json
+++ b/Event Attendees Management/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 1,
+    "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -135,6 +135,7 @@
   },
   "ScreenOrder": [
     "Splash",
+    "Dashboard",
     "Success"
   ]
 }
