--- a/Event Attendees Management/CanvasManifest.json
+++ b/Event Attendees Management/CanvasManifest.json
@@ -32,7 +32,7 @@
       "disablecdsfileandlargeimage": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
-      "enableappembeddingux": false,
+      "enableappembeddingux": true,
       "enablechatbotfeature": true,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
