--- a/eam/Src/Splash.fx.yaml
+++ b/eam/Src/Splash.fx.yaml
@@ -1,2 +1,11 @@
 Splash As screen:
+    BackgroundImage: ='photo_2024-02-05_12-14-06'
+
+    Image1 As image:
+        Height: =285
+        Image: ='photo_2024-02-05_12-17-19-transformed'
+        Width: =547
+        X: =416
+        Y: =230
+        ZIndex: =1
 
