--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -2,3 +2,46 @@ Dashboard As screen:
     BackgroundImage: ='milad-fakurian-GJKx5lhwU3M-unsplash (1)'
     ImagePosition: =ImagePosition.Fill
 
+    Gallery2 As gallery.galleryVertical:
+        DelayItemLoading: =true
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =111
+        Items: =CustomGallerySample
+        Layout: =Layout.Vertical
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplateSize: =If(Self.Layout = Layout.Horizontal, Min(280, Self.Width - 60), Min(280, Self.Height - 60))
+        Width: =1366
+        ZIndex: =1
+
+    Image3 As image:
+        Height: =111
+        Image: ='photo_2024-02-05_12-17-19-transformed'
+        Width: =194
+        ZIndex: =2
+
+    Label3 As label:
+        Color: =RGBA(56, 96, 178, 1)
+        FontWeight: =FontWeight.Semibold
+        Height: =111
+        Size: =25
+        Text: ="Global Power Platform Bootcamp 2024 Ahmedabad"
+        Width: =868
+        X: =230
+        ZIndex: =3
+
+    Label4 As label:
+        FontWeight: =FontWeight.Semibold
+        Height: =111
+        Size: =15
+        Text: ="Powered by "
+        Width: =100
+        X: =1098
+        ZIndex: =4
+
+    Image3_1 As image:
+        Height: =111
+        Image: ='photo_2024-02-05_12-17-19-transformed'
+        Width: =156
+        X: =1210
+        ZIndex: =5
+
