--- a/eam/Src/Success.fx.yaml
+++ b/eam/Src/Success.fx.yaml
@@ -4,11 +4,44 @@ Success As screen:
 
     HtmlText1 As htmlViewer:
         Fill: =RGBA(255, 255, 255, 1)
-        Height: =686
+        Height: =537
         HtmlText: |-
             ="<div style=""margin: 12px 10px 8px 10px; width: "&(Self.Width-31)&"px; height: "&(Self.Height-31)&"px; background-color: white; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:5px""></div>"
         Width: =729
         X: =324
-        Y: =34
+        Y: =182
         ZIndex: =1
+
+    Rectangle1 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =480
+        Width: =689
+        X: =344
+        Y: =224
+        ZIndex: =2
+
+    Label2 As label:
+        Align: =Align.Center
+        FontWeight: =FontWeight.Bold
+        Height: =123
+        Size: =30
+        Text: ="Thank you for visit our website!"
+        Width: =574
+        X: =411
+        Y: =444
+        ZIndex: =3
+
+    Image2 As image:
+        Height: =46
+        Image: ='cross-removebg-preview'
+        Width: =58
+        X: =975
+        Y: =211
+        ZIndex: =4
+
+    Image4 As image:
+        Image: ='MicrosoftTeams-image (1)'
+        X: =40
+        Y: =40
+        ZIndex: =5
 
