--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -49,7 +49,7 @@ Dashboard As screen:
         BorderColor: =RGBA(237, 237, 237, 1)
         Color: =RGBA(241, 244, 249, 1)
         Default: =""
-        Height: =65
+        Height: =57
         HintText: ="Search"
         RadiusBottomLeft: =10
         RadiusBottomRight: =10
@@ -57,14 +57,68 @@ Dashboard As screen:
         RadiusTopRight: =10
         Width: =414
         X: =14
-        Y: =132
+        Y: =124
         ZIndex: =6
 
     Icon2 As icon.Search:
-        Height: =49
+        Color: =RGBA(166, 166, 166, 1)
+        Height: =54
         Icon: =Icon.Search
-        Width: =54
-        X: =374
-        Y: =140
+        Width: =45
+        X: =383
+        Y: =125
         ZIndex: =7
+
+    TextInput1_1 As text:
+        BorderColor: =RGBA(237, 237, 237, 1)
+        Color: =RGBA(241, 244, 249, 1)
+        Default: =""
+        Height: =57
+        HintText: =""
+        RadiusBottomLeft: =10
+        RadiusBottomRight: =10
+        RadiusTopLeft: =10
+        RadiusTopRight: =10
+        Width: =211
+        X: =449
+        Y: =124
+        ZIndex: =8
+
+    TextInput1_2 As text:
+        BorderColor: =RGBA(237, 237, 237, 1)
+        Color: =RGBA(241, 244, 249, 1)
+        Default: =""
+        Height: =57
+        HintText: =""
+        RadiusBottomLeft: =10
+        RadiusBottomRight: =10
+        RadiusTopLeft: =10
+        RadiusTopRight: =10
+        Width: =211
+        X: =682
+        Y: =124
+        ZIndex: =9
+
+    TextInput1_3 As text:
+        BorderColor: =RGBA(237, 237, 237, 1)
+        Color: =RGBA(241, 244, 249, 1)
+        Default: =""
+        Height: =57
+        HintText: =""
+        RadiusBottomLeft: =10
+        RadiusBottomRight: =10
+        RadiusTopLeft: =10
+        RadiusTopRight: =10
+        Width: =211
+        X: =915
+        Y: =124
+        ZIndex: =10
+
+    Button1 As button:
+        Height: =57
+        Text: ="Register Now"
+        Width: =211
+        X: =1142
+        Y: =124
+        ZIndex: =11
 
