--- a/eam/Src/Splash.fx.yaml
+++ b/eam/Src/Splash.fx.yaml
@@ -9,3 +9,13 @@ Splash As screen:
         Y: =230
         ZIndex: =1
 
+    Timer1 As timer:
+        AutoPause: =false
+        AutoStart: =true
+        Duration: =5000
+        OnTimerEnd: =Navigate(Dashboard,ScreenTransition.Fade)
+        Visible: =false
+        X: =40
+        Y: =40
+        ZIndex: =2
+
