--- a/eam/Src/Splash.fx.yaml
+++ b/eam/Src/Splash.fx.yaml
@@ -1,5 +1,6 @@
 Splash As screen:
-    BackgroundImage: ='photo_2024-02-05_12-14-06'
+    BackgroundImage: ='photo_2024-02-05_12-15-49'
+    ImagePosition: =ImagePosition.Fill
 
     Image1 As image:
         Height: =285
