--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -146,7 +146,25 @@ Dashboard As screen:
         ZIndex: =13
 
     HtmlText2 As htmlViewer:
-        X: =40
-        Y: =40
+        Height: =635
+        Width: =610
+        X: =412
+        Y: =133
         ZIndex: =14
+
+    Rectangle2 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =631
+        Width: =610
+        X: =412
+        Y: =137
+        ZIndex: =15
+
+    Label5 As label:
+        Height: =82
+        Text: ="Text"
+        Width: =610
+        X: =412
+        Y: =141
+        ZIndex: =16
 
