--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -127,6 +127,7 @@ Dashboard As screen:
 
     HeaderGallery As gallery.galleryVertical:
         DelayItemLoading: =true
+        Fill: =RGBA(232, 244, 217, 1)
         Height: =55
         Items: ='Event Attendees Management'
         Layout: =Layout.Vertical
