--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -924,43 +924,58 @@ Dashboard As screen:
         Y: =230
         ZIndex: =27
 
-    Rectangle3 As rectangle:
-        Fill: =RGBA(255, 255, 255, 1)
-        Height: =442
-        Width: =561
-        X: =419
-        Y: =295
-        ZIndex: =28
+    Group3 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =33
 
-    Label15 As label:
-        Align: =Align.Center
-        Color: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(0, 94, 146, 1)
-        FontWeight: =FontWeight.Bold
-        Height: =64
-        Size: =25
-        Text: ="Text"
-        Width: =561
-        X: =419
-        Y: =295
-        ZIndex: =29
+        Rectangle3 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =442
+            Width: =561
+            X: =419
+            Y: =295
+            ZIndex: =28
 
-    Label19 As label:
-        Align: =Align.Center
-        FontWeight: =FontWeight.Semibold
-        Height: =80
-        Size: =25
-        Text: ="Thank you for attendees event."
-        Width: =552
-        X: =428
-        Y: =503
-        ZIndex: =30
+        Label15 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Fill: =RGBA(0, 94, 146, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =64
+            Size: =25
+            Text: ="Text"
+            Width: =561
+            X: =419
+            Y: =295
+            ZIndex: =29
 
-    Icon3 As icon.Cancel:
-        Color: =RGBA(255, 255, 255, 1)
-        Icon: =Icon.Cancel
-        Width: =50
-        X: =930
-        Y: =295
-        ZIndex: =31
+        Label19 As label:
+            Align: =Align.Center
+            FontWeight: =FontWeight.Semibold
+            Height: =80
+            Size: =25
+            Text: ="Thank you for attendees event."
+            Width: =552
+            X: =428
+            Y: =503
+            ZIndex: =30
+
+        Icon3 As icon.Cancel:
+            Color: =RGBA(255, 255, 255, 1)
+            Icon: =Icon.Cancel
+            Width: =50
+            X: =930
+            Y: =295
+            ZIndex: =31
+
+        HtmlText3 As htmlViewer:
+            Height: =437
+            HtmlText: =""
+            Width: =552
+            X: =428
+            Y: =295
+            ZIndex: =32
 
