--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -117,7 +117,8 @@ Dashboard As screen:
 
     Button1 As button:
         Height: =57
-        OnSelect: =_ShowRegform
+        OnSelect: |-
+            =NewForm(Form1);UpdateContext({_ShowRegform:true})
         Text: ="Register Now"
         Width: =211
         X: =1142
